--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "repository": {},
   "license": "UNLICENSED",
   "dependencies": {
-    "@remotion/cli": "4.0.42",
-    "@remotion/zod-types": "4.0.42",
+    "@remotion/cli": "4.0.43",
+    "@remotion/preload": "4.0.43",
+    "@remotion/zod-types": "4.0.43",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "remotion": "4.0.42",
+    "remotion": "4.0.43",
     "zod": "^3.21.4"
   },
   "devDependencies": {
-    "@remotion/eslint-config": "4.0.42",
+    "@remotion/eslint-config": "4.0.43",
     "@types/react": "^18.0.26",
     "@types/web": "^0.0.86",
     "eslint": "^8.43.0",
